tests/success/for_with_break.tig
let
    var a := 5
in
    for i:=0 to 10 do(
        printi(i);
        print("\n");
        a := a - 1;
        if not(a) then break)
end        
