tests/fail/break_in_a_valued_expression.tig
let
    var a := (1 + 2; 3)
    var b := (if a -3 then break; 1)
in
    1
end
